add allure report, add screenShorts, add log4j